--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>TS Hangman</title>
   </head>
   <body>
-    <div id="app"></div>
+    
+    <div class="letters-container">
+
+    </div>
+
+    <div class="word-container">
+
+    </div>
+
+    <div class="lives-container">
+      You have<span class="lives">10</span>lives
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
